// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> Arrow story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    id="headlessui-popover-button-6"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> Bottom story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-21"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> BottomEnd story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-46"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> BottomStart story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-41"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> Default story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-4"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> Left story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-26"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> LeftEnd story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-66"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> LeftStart story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-61"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> Right story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-16"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> RightEnd story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-56"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> RightStart story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-51"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> Top story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-11"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> TopEnd story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-36"
    type="button"
  >
    Open Popover
  </button>
</div>
`;

exports[`<Popover /> TopStart story renders snapshot 1`] = `
<div>
  <button
    aria-expanded="false"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-31"
    type="button"
  >
    Open Popover
  </button>
</div>
`;
